# pyshiny_govstyle

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  code_review_template.md  pull_request_template.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: pull_request_comment.yml  pull_request_workflow.yml
docs/contributor_guide/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
pyshinygovstyle/: main.py
pyshinygovstyle/ui/: text_input.py
pyshinygovstyle/www/css/: govuk-frontend-6.0.0.min.css
tests/: conftest.py  repo_tests_README.md  test_empty.py  test_text_input.py
