[project]
name = "pyshinygovstyle"
description = "Government Design System stylings for Shiny for Python"
version = "0.0.1"
authors = [
    {"name" = "ONS"}
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "pyyaml>=6.0.1",
    "shiny>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "coverage",
    "isort>=5.13.2",
    "myst-parser",
    "pre-commit>=2.6.0",
    "pytest",
    "python-dotenv",
    "ruff>=0.0.270",
    "tomli"
]

[tool.setuptools]
zip-safe = false
